fix : 1219 정리